--- a/Misc/meetings.html
+++ b/Misc/meetings.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
+
 <head>
-  <title>guidelines</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
+	<title>Meeting Minutes | 1107</title>
+	<link rel="stylesheet" href="../styles/main.css">
+	<script src="../scripts/main.js"></script>
 </head>
 
 <body>
-<!-- Site navigation menu -->
-<ul class="navbar">
-	<li><a href="../index.html">Home</a>
-   	<li><a href="https://www.dropbox.com/sh/mjyajw349thbj61/AAAAGNBVWF_0VHEPafZjLaHPa/00%20Videos%20of%20Lectures%20S1%202020?dl=0&subfolder_nav_tracking=1">Meeting Minutes</a>
-	<li><a href="process.html">Process Support</a>
-	</ul>
+	<h1>Meeting Minutes</h1><br>
+	<nav></nav>
 
+	<p>Team name ____________________________________________________</p>
 
+	<p>Team Coordinator/Leader ______________________________________</p>
 
+	<a>Meeting Minutes Repository Alternative Link</a>
 
-<h1>Meeting Minutes</h1><br>
+	<hr />
 
+	<p>
+		<em>
+			Note: the preferred option will be to replace these links in your site with equivalent links
+			to your repository e.g. Canvas discussion Board pages or Dropbox links
+		</em>
+	</p>
 
-<h4><p>Team name ____________________________________________________</p></h4>
-
-<h4><p>Team Coordinator/Leader ______________________________________</p></h4>
-		
-
-  <a href="https://canvas.aut.ac.nz/courses/1048/discussion_topics/3449" Meeting Minutes Repository Alternative Link</a>      
-
-  
-
-<hr/>
-<p><h6><em>Note: the preferred option will be to replace these links in your site with equivalent links to your repository e.g. Canvas discussion Board pages or Dropbox links</h6></em></p>
+	<footer></footer>
 </body>
+
 </html>
