--- a/Misc/team-formation.html
+++ b/Misc/team-formation.html
@@ -1,70 +1,58 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
+
 <head>
-  <title>Peer Evaluation Form</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
+	<title>Team Formation | 1107</title>
+	<link rel="stylesheet" href="../styles/main.css">
+	<script src="../scripts/main.js"></script>
 </head>
 
 <body>
-<!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="../index.html">Home</a>
-  <li><a href="process.html">Process Support</a>
-</ul>
+	<h1>Team Formation Form</h1>
+	<nav></nav>
 
+	<h4>Due Date: Advised on Canvas </h4>
+	<p><em>(Team coordinator to confirm team have met with your TA)</em></p>
 
+	<p>Team name ____________________________________________________</p>
+	<p>Team coordinator/Leader ______________________________________</p>
 
+	<table>
+		<tr>
+			<th>Team Member Details</th>
+			<th scope="col" class="last name">Last Name</th>
+			<th scope="col" class="first name">First Name</th>
+			<th scope="col" class="id">Student ID</th>
+		</tr>
+		<tr>
+			<th scope="row">Team Member 1</th>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th scope="row">Team Member 2</th>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th scope="row">Team Member 3</th>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
 
-<h1>Team Formation Form</h1><br>
-
-<h4>Due Date:  Advised on Canvas  </h4><p><em>(Team coordinator to confirm team have met with your TA)</em></p> 
-
-<h4><p>Team name ____________________________________________________</p></h4>
-
-<h4><p>Team coordinator/Leader ______________________________________</p></h4>
-		
-<table>
-    <p>
-	<body ><th>Team Member Details</th>
-    
-        
-        <th scope="col" class="last name">Last Name</th> 
-	    <th scope="col" class="first name">First Name</th> 
-        <th scope="col" class="id">Student ID</th> 
-		
-    </tr>
 	<hr />
+	<p>
+		<em>
+			Note: These details will be provided via your group on Canvas, but here the preferred option will be to fill in the cells in your site with 'hard
+			coded'
+			details in this form in a row, and email the link to your TA when completed.
+			Think of this site as a work in progress.</em>
 	</p>
-	
-	<p align = "left"</p>
-		<th scope="row">Team Member 1</th>
-		<td></td>
-		<td></td>
-        <td></td>
-		
-   </tr>
-	<p align = "left"</p>
-	<th scope="row">Team Member 2</th>
-        <td></td>
-		<td></td>
-        <td></td>
-		
- 
-    </tr>
-	<th scope="row">Team Member 3</th>
-        <td></td>
-		<td></td>
-        <td></td>
-		
-  
-    </tr>
-	
-  
-</table>
 
-
-<hr/>
-<p><h6><em>Note: These details will be provided via your group on Canvas, but here the preferred option will be to fill in the cells in your site with 'hard coded' details in this form(between each cell ('td' = "table data" element) in a row, and email the link to your TA when completed.  Think of this site as a work in progress.</p></h6></em> 
-
+	<footer></footer>
 </body>
+
 </html>
