--- a/Misc/topic.html
+++ b/Misc/topic.html
@@ -10,6 +10,7 @@
 	<h1>Chosen Technology/Topic</h1>
 	<nav></nav>
 
+	<!--
 	<p>The page or area describing your chosen technology/topic and why it is significant and/or has important implications for society.
 	<p>
 
@@ -31,6 +32,34 @@
 		A framework for implementing and teaching the social and ethical impact of computing.
 		Education and Information Technologies, 1(2), 101-122.
 	</cite>
+	-->
+ 
+	<hr />
+
+	<h2>The Ethical Implications of Self-Driving Cars</h2>
+	<h3>Definition</h3>
+	<p>
+		Technology has been advancing at a rapid rate in recent years, eventually leading to the research and development of Self-Driving cars.
+		These developments have also lead to questions concerning the safety of these cars, as well as the tougher questions regarding how the AI should act in
+		situations where a human could be put in danger as a consequence of the Self-Driving AI’s decision.
+	</p>
+
+	<h3>Justification</h3>
+	<p>
+		With current introduction to Tesla's trendy autopilot mode it makes this topic relevant to our current day, as having a 'safer' version of self driving
+		cars increased the amount of people who have used this autopilot feature bringing this question of if it were to crash whose fault would it be to be
+		more pertinent than ever.
+		Due to these reasons we as a group came to a conclusion to pick the topic of The Ethics of Self Driving Cars.
+	</p>
+
+	<h3>Importance</h3>
+	<p>
+		The topic of self-driving cars is an ever-important area with autonomous vehicles becoming closer and closer to being common on our roads.
+		This raises critically important ethical questions surrounding what would happen were someone to be injured by a vehicle running on autopilot and who
+		would be at fault.
+		These questions must be resolved before autonomous cars become mainstream.
+		For this reason, the topic of ethics surrounding autonomous vehicles is extremely important to research.
+	</p>
 
 	<footer></footer>
 </body>
