--- a/Misc/references.html
+++ b/Misc/references.html
@@ -10,6 +10,7 @@
 	<h1>References</h1>
 	<nav></nav>
 
+	<!--
 	<p>
 		The page or area listing the sources
 		<em>(high quality refereed journal or conference articles - cited as APA formatted references)</em>
@@ -19,6 +20,18 @@
 	<p>An example of a cited reference:</p>
 
 	<cite>Baecker, R. M. (2019). Computers and society: Modern perspectives: Oxford University Press, USA.</cite>
+	-->
+
+	<ul>
+		<li>
+			Hansson, S. O.; Belin, MÅ.; Lundgren, B. (2021). Self-Driving Vehicles &ndash; An Ethical Overview. <i>Philosophy & Technology, 34</i>, 1383&ndash;1408.
+			<a href="https://doi.org/10.1007/s13347-021-00464-5">https://doi.org/10.1007/s13347-021-00464-5</a>
+		</li>
+		<li>
+			Trappl, R. (2016). Ethical Systems for Self-Driving Cars: An Introduction. <i>Applied Artificial Intelligence, 30(8)</i>, 745&ndash;747.
+			<a href="https://doi.org/10.1080/08839514.2016.1229737">https://doi.org/10.1080/08839514.2016.1229737</a>
+		</li>
+	</ul>
 
 	<footer></footer>
 </body>
