--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
 	<h1>The Ethical Implications of Autonomous Vehicles</h1>
 	<nav></nav>
-
+	
+	<p>
+		Technology has been advancing at a rapid rate in recent years, eventuakky leading to the research and development of
+		Self-Driving cars. These developments have lead to questions concerning the safety these cars, as well as the tougher question
+		of how the AI should act in situations where a human could be put in danger as a consequence of Self-Driving AI's decision.
+	</p>
+	
 	<p>
 		This mock-up site is intended to support your team project so you can take this as a set of files
 		and as a starting point and adapt it to your preference.
